src/objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist_Multi_Select__c</fullName>
        <label>Picklist (Multi-Select)</label>
        <picklist>
            <picklistValues>
                <fullName>Option 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 7</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Option 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Lookup_Object__c</fullName>
        <label>Test Lookup Object</label>
        <referenceTo>TestLookupObject__c</referenceTo>
        <relationshipLabel>TestObjects</relationshipLabel>
        <relationshipName>TestObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Area_Long__c</fullName>
        <label>Text Area Long</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_Rich__c</fullName>
        <label>Text Area Rich</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>TestObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>